--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/account
     username: root
-    password: srivatsan
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     
   jpa:
@@ -13,6 +13,21 @@ spring:
     name: account-service
       main:    allow-circular-references: true
       mvc:    pathmatch:      matching-strategy: ant-path-matcher
+  
+  cloud:
+    stream:
+      bindings:
+        transaction-out:
+          content-type: application/json
+          destination: account-topic-1
+          group: orchestrator
+        account-out:
+          content-type: application/json
+          destination: account-topic
+          group: orchestrator
+      kafka:
+        binder:
+          brokers: localhost:9092     
     
 eureka:
   client:
